--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3682,3 +3682,32 @@ button {
     position: relative;
     box-shadow: none;
 }
+
+.arrow-down img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+}
+
+.arrow-down {
+    position: absolute;
+    top: 85%;
+}
+.pulse{
+    animation: pulse 1s infinite;
+}
+@keyframes pulse {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(0.5rem);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
