--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1162,116 +1162,6 @@ body {
     position: fixed
 }
 
-.ajax-wrapper {
-    transition: opacity .3s
-}
-
-.is-loading {
-    pointer-events: none!important;
-    animation: pulse 2s infinite ease-in-out
-}
-
-@keyframes pulse {
-    0% {
-        opacity: .75
-    }
-
-    50% {
-        opacity: .25
-    }
-
-    to {
-        opacity: .75
-    }
-}
-
-@font-face {
-    font-family: ABC Arizona Mix;
-    src: url(../fonts/ABCArizonaMix-Light.woff) format("woff"),url(../fonts/ABCArizonaMix-Light.woff2) format("woff2");
-    font-weight: 300;
-    font-style: normal
-}
-
-@font-face {
-    font-family: ABC Arizona Sans;
-    src: url(../fonts/ABCArizonaSans-Regular.woff) format("woff"),url(../fonts/ABCArizonaSans-Regular.woff2) format("woff2");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: ABC Arizona Sans;
-    src: url(../fonts/ABCArizonaSans-Medium.woff) format("woff"),url(../fonts/ABCArizonaSans-Medium.woff2) format("woff2");
-    font-weight: 500;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Rhymes Text;
-    src: url(../fonts/RhymesText-Light.woff) format("woff"),url(../fonts/RhymesText-Light.woff2) format("woff2");
-    font-weight: 300;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Rhymes Text;
-    src: url(../fonts/RhymesText-LightItalic.woff) format("woff"),url(../fonts/RhymesText-LightItalic.woff2) format("woff2");
-    font-weight: 300;
-    font-style: italic
-}
-
-.listreset {
-    padding: 0;
-    margin: 0;
-    list-style: none outside
-}
-
-.accessible {
-    border: 0;
-    clip: rect(1px,1px,1px,1px);
-    -webkit-clip-path: inset(50%);
-    clip-path: inset(50%);
-    position: absolute!important;
-    height: 1px!important;
-    width: 1px!important;
-    margin: -1px!important;
-    padding: 0!important;
-    overflow: hidden;
-    word-wrap: normal!important
-}
-
-.not-accessible {
-    border: initial;
-    clip: auto;
-    -webkit-clip-path: none;
-    clip-path: none;
-    position: static;
-    height: auto;
-    width: auto;
-    margin: initial;
-    padding: initial;
-    overflow: auto
-}
-
-.visible {
-    position: static;
-    opacity: 1;
-    pointer-events: all;
-    z-index: 0;
-    transition: opacity .6s
-}
-
-.hidden,.hidden-absolute {
-    opacity: 0;
-    pointer-events: none;
-    z-index: -1;
-    transition: opacity .6s
-}
-
-.hidden-absolute {
-    position: absolute;
-    top: 0
-}
 
 .display {
     font-family: ABC Arizona Mix,Times New Roman,serif
@@ -1299,7 +1189,8 @@ body {
 
 .cover,.homepage__hero__image .media-wrapper,.media-wrapper.square {
     height: 100%;
-    overflow: hidden
+    overflow: hidden;
+    background-attachment: fixed;
 }
 
 .justify-start {
@@ -3683,6 +3574,12 @@ button {
     position: relative;
     box-shadow: none;
 }
+[type=submit]:hover {
+    border: 2px solid #01313c;
+    cursor: pointer;
+    border-radius: 1.5rem;
+    padding: 1rem;
+}
 
 .arrow-down img {
     display: flex;
@@ -3711,4 +3608,35 @@ button {
         transform: translateY(0);
     }
 }
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 3rem;
+    z-index: 999 !important;
+    transition: all 0.5s;
+    border-radius: 10px;
+    align-items: center;
+  }
 
+  .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #404040;
+    opacity: 0.5;
+    z-index: 2 !important;
+  }
+
+
+
+.popup h3 {
+    padding-top: 1rem !important;
+    margin-bottom: 3rem !important;
+}
