--- a/src/pages/location.astro
+++ b/src/pages/location.astro
@@ -39,7 +39,10 @@ iframe {
   margin-block: 1.5rem;
 }
 
-@media (max-width: 40rem){
+@media (max-width: 40rem) {
+  h1{
+    margin-block-start: 1rem;
+  }
   iframe {
     width: 250px !important;
   }
