--- a/src/pages/location.astro
+++ b/src/pages/location.astro
@@ -11,7 +11,7 @@ import { ViewTransitions } from 'astro:transitions';
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} >
     <ViewTransitions />
-    <title>M&D's Wedding</title>
+    <title>Location</title>
   </head>
 <style>
     main {
