--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,11 +4,15 @@ let currentYear = currentDate.getFullYear();
 ---
 
 
-<footer>
+<footer id="form">
 	{
 	
 					<ul>
-						
+						<li>
+								<a href="/form">
+									RSVP
+								</a>
+							</li>
 							<li>
 								<a href="/contact">
 									Contact
