--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,65 +1,69 @@
 ---
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+
 let currentDate = new Date();
 let currentYear = currentDate.getFullYear();
 ---
 
+	<footer id="form" >
+		{
+		
+						<ul>
+						    <li>
+								<a href={`/${lang}/form/`}>
+         		 					{t('footer.form')}
+       							</a>
+							</li>
+								<li>
+									<a href={`/${lang}/contact/`}>
+          								{t('footer.contact')}
+       								</a>
+								</li>
 
-<footer id="form">
-	{
-	
-					<ul>
-						<li>
-								<a href="/form">
-									RSVP
-								</a>
-							</li>
-							<li>
-								<a href="/contact">
-									Contact
-								</a>
-							</li>
+
+								<li>
+									<a href={`/${lang}/location/`}>
+          								{t('footer.location')}
+       								</a>
+								</li>
+	                            <li>
+									<a href={`/${lang}/`}>
+          								{t('footer.home')}
+       								</a>
+								</li>
+					
+						</ul>
 
 
-							<li>
-								<a href="/location">
-									Location
-								</a>
-							</li>
-                            <li>
-								<a href="/">
-									Home
-								</a>
-							</li>
-				
+						<ul class="menu flex-row">
+					<li>
+						<select
+							id="language-select"
+							style="border: none; text-align: center; color: #8C8C8C"
+							onchange="handleLanguageChange(this)"
+						>
+							<option value="" disabled selected>Choose language</option>
+							<option value="/en/">English</option>
+							<option value="/ro/">Romanian</option>
+						</select>
+					</li>
 					</ul>
-					<p>&#169;{currentYear}. All rights reserved.</p>
-		
-		
-	}
-</footer>
-<!-- <script is:inline>
-    window.addEventListener("load", (event) => {
-        const pathsToCheck = [
-      "/contact",
-      "/location"
 
-   ];
-
-   if (pathsToCheck.some((path) => window.location.pathname.includes(path))) {
-    console.log("hello")
-    
-       const footer = document.querySelector("footer ul")
-       const newLi = document.createElement("li");
-       const newA = document.createElement("a");
-       newA.href = "./";
-       newA.innerHTML = "Home"
-       footer.appendChild(newLi);
-       newLi.appendChild(newA);
-
-   }
-});
-   
-</script> -->
+						<p>&#169;{currentYear}. All rights reserved.</p>
+			
+			
+		}
+	</footer>
+	<script is:inline>
+function handleLanguageChange(selectElement) {
+        setTimeout(() => {
+            location = selectElement.value;
+        }, 500);
+    }
+	</script>
 <style>
 	footer {
 		background-color: #4c4c4b;
