--- a/src/pages/[language]/index.astro
+++ b/src/pages/[language]/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import { ViewTransitions } from 'astro:transitions';
+// import { ViewTransitions } from 'astro:transitions';
 import Footer from '../../components/Footer.astro'
 import "../../styles/style.css";
 
@@ -20,13 +20,13 @@ const { entry } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} >
-    <ViewTransitions />
+    <!-- <ViewTransitions /> -->
     <title>M&D's Wedding</title>
   </head>
 
   <body>
     
-    <main transition:animate="slide">
+    <main>
 
         <div class="homepage">
 
