--- a/src/pages/[language]/form.astro
+++ b/src/pages/[language]/form.astro
@@ -16,7 +16,7 @@ const { language } = Astro.params;
 const selectedLanguage = languageCollection.find((lang) => lang.slug === language);
 ---
 
-<html lang="en">
+<html lang={selectedLanguage?.data.iso}>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
