--- a/src/pages/[language]/index.astro
+++ b/src/pages/[language]/index.astro
@@ -14,7 +14,7 @@ export async function getStaticPaths() {
 const { entry } = Astro.props;
 ---
 
-<html lang="en">
+<html lang={entry?.data.iso}>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
