--- a/src/pages/[language]/contact.astro
+++ b/src/pages/[language]/contact.astro
@@ -47,6 +47,9 @@ const selectedLanguage = languageCollection.find((lang) => lang.slug === languag
     align-items: center;
     gap: 2rem;
 }
+a{
+  text-align: center;
+}
 
 </style>
   <body>
