--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -14,11 +14,12 @@ import { languages } from '../i18n/ui';
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		justify-content: center;
+		justify-content:flex-end;
 		list-style: none;
 		gap: 1.5rem;
-		padding: 0;
+		padding: 0 1rem;
 		margin: 0;
+		background-color: transparent !important;
 	}
 
  ul li {
