Added schedule page

--- a/src/pages/[language]/index.astro
+++ b/src/pages/[language]/index.astro
@@ -51,7 +51,7 @@ const { entry } = Astro.props;
         <span>{entry?.data.saveTheDate}</span>
         <strong>{entry?.data.newlyWeds}</strong>
         <span>{entry?.data.date}</span>
-        <span>{entry?.data.invitation}</span>
+        <!-- <span>{entry?.data.invitation}</span> -->
         </h1> 
         </div>
 
