--- a/src/pages/[language]/form.astro
+++ b/src/pages/[language]/form.astro
@@ -54,14 +54,14 @@ const selectedLanguage = languageCollection.find((lang) => lang.slug === languag
                       {selectedLanguage?.data.diet}
                         <textarea name="dietRestict" required></textarea>
                      </label> -->
-                     <label for="plus">{selectedLanguage?.data.guests}</label>
+                     <!-- <label for="plus">{selectedLanguage?.data.guests}</label>
                      <select name="plus" id="plus"  onchange="showPopup()" required="">
                          <option value="0" selected="">0</option>
                          <option value="1">1</option>
                          <option value="2">2</option>
                          <option value="3">3</option>
                          <option value="4">4</option>
-                     </select>
+                     </select> -->
 
                       <!-- Popup div -->
             <div id="modal-overlay" class="overlay" onclick="hidePopup()"></div>
