--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -87,20 +87,21 @@ let currentYear = currentDate.getFullYear();
 
 	@media (max-width: 48rem) {
 		footer {
+	
 			padding: 4.375rem 1.875rem;
 			justify-content: flex-start;
 		}
 
 		footer ul {
 			padding: 1rem;
-			flex-direction: column;
+			flex-direction: row;
 			gap: 1rem;
-			justify-content: flex-start;
+			justify-content: center;
 			text-align: left;
 		}
 		footer p {
 			padding: 1rem;
-			text-align: left;
+			text-align: center;
 		}
 	}
 </style>
